# lifelike

./: .cspell.json  .gitignore  .mega-linter.yml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ruff.toml
.devcontainer/: devcontainer.debug.json  devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md  (+1 more)
appserver/: .gitignore  Dockerfile  Pipfile  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
appserver/assets/: reset_email.html
appserver/fixtures/: seed.json
appserver/migrations/: utils.py
appserver/migrations/versions/: 000000000000_squashed.py  000000000001_nullable_raw_file.py  00167925aacc_.py  001_add_annotations_file_unique_index.py  001_add_folder_annotation_config.py  1c3ac93bf8e7_.py  34f922d141bc_.py  36d25e171658_.py  3a751148aa3b_add_view_table.py  62fd9aa6405a_unified_file_schema.py  65d827e55b5b_fix_broken_map_links_on_production.py  8f6d4eef042d_allow__view_property_in_graph_file_.py  a1b2c3d4e5f6_add_needs_reannotation_to_files.py  c4a037faaf1a_.py  cd1cffdea0e8_.py  e32ff16900a3_migrate_sankey__views_links_ids.py  e89de4f6cd7f_fix_sankey_files_not_passing_validation.py  edac65841141_add_view_size_to_saved_sankey_views.py
appserver/neo4japp/: constants.py  database.py  encoders.py  factory.py
appserver/neo4japp/blueprints/: account.py  annotations.py  auth.py  enrichment_visualisation.py  files.py  filesystem.py  google_drive.py  meta.py  projects.py  storage.py  view.py
appserver/neo4japp/data_transfer_objects/: visualization.py
appserver/neo4japp/lmdb_manager/: manager.py
appserver/neo4japp/models/: auth.py  common.py  files.py  files_queries.py  projects.py  views.py
appserver/neo4japp/schemas/: annotations.py  enrichment.py  filesystem.py  google_drive.py
appserver/neo4japp/schemas/formats/: annotations.py  annotations_v1.json
appserver/neo4japp/services/: auth.py  common.py  export.py  file_storage.py  kg_service.py  libreoffice.py  mozg_kg_service.py  projects.py  search.py  visualizer.py
appserver/neo4japp/services/annotations/: annotation_graph_service.py  annotation_interval_tree.py  enrichment_annotation_service.py  folder_annotation_service.py  initializer.py  lmdb_connection.py  manual_annotation_service.py  prepare_databases.py  sorted_annotation_service.py
appserver/neo4japp/services/annotations/misc/: annotate_papers.py
appserver/neo4japp/services/annotations/nlp_data_output/: move.py  produce_nlp_training.py
appserver/neo4japp/services/annotations/profilers/: annotations_profiler.py
appserver/neo4japp/services/annotations/utils/: graph_queries.py  parsing.py
appserver/neo4japp/services/elastic/: elastic_service.py
appserver/neo4japp/services/enrichment/: enrichment_table.py
appserver/neo4japp/services/enrichment/data_transfer_objects/: dto.py
appserver/neo4japp/services/file_types/: providers.py  service.py
appserver/neo4japp/services/storage_drivers/: postgresql.py
appserver/neo4japp/storage/: interface.py
appserver/neo4japp/storage/adapters/: azure_adls.py  google_drive.py  postgres.py
appserver/neo4japp/utils/: queries.py  request.py  string.py
appserver/tests/: conftest.py
appserver/tests/api/: account_test.py  annotations_test.py  auth_test.py  conftest.py  elasticsearch_test.py  folder_annotations_test.py  logger_test.py  reactive_annotation_test.py
appserver/tests/api/filesystem/: conftest.py  file_types_test.py  object_parent_test.py  object_test.py
appserver/tests/database/models/: conftest.py  projects_test.py
appserver/tests/database/services/: conftest.py  file_types_test.py  projects_test.py
appserver/tests/database/services/annotations/: folder_annotation_service_test.py  util.py
appserver/tests/database/services/annotations/manual_annotations/: conftest.py
appserver/tests/database/services/elastic/: elasticsearch_test.py
appserver/tests/unit/: storage_test.py
statistical-enrichment/: Dockerfile  Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt
statistical-enrichment/statistical_enrichment/services/enrichment/: enrichment_visualisation.py
statistical-enrichment/statistical_enrichment/services/enrichment/enrich_methods/: fisher.py
statistical-enrichment/tests/: conftest.py  test_fisher.py  test_schemas.py
(+480 files in other folders)
