[project]
name = "lifelike-statistical-enrichment"
version = "0.0.0"
requires-python = "==3.10.*"
dependencies = [
  "flask==3.1.3",
  "flask-caching==2.3.1",
  "flask-marshmallow==1.4.0",
  "gunicorn==25.2.0",
  "neo4j==6.1.0",
  "pandas==2.3.3",
  "redis==7.3.0",
  "scipy==1.15.3",
  "statsmodels==0.14.6",
  "webargs==8.7.1",
  "elastic-apm[flask]",
]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pycodestyle==2.14.0",
  "pytest==9.0.2",
]
